[gd_scene load_steps=4 format=3 uid="uid://c4hy8qfv5mh0p"]

[ext_resource type="Script" uid="uid://dljo6h1kox00y" path="res://shop.gd" id="1_blqjs"]
[ext_resource type="Texture2D" uid="uid://dnlu3y8a1uj8u" path="res://Item stuff/gettyimages-157482029-612x612.jpg" id="1_viryw"]
[ext_resource type="Texture2D" uid="uid://iy2nc8nkntsh" path="res://Item stuff/Flower_stock_photo.jpg" id="2_e7rdd"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_blqjs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.67121, 0.371713)

[node name="btn_book" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_viryw")

[node name="btn_flower" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_e7rdd")

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 11.0
offset_right = 690.0
offset_bottom = 34.0
text = "1"

[node name="BookPrice" type="Label" parent="."]
offset_left = 412.0
offset_top = 151.0
offset_right = 1692.0
offset_bottom = 174.0
text = "100"

[node name="FlowerPrice" type="Label" parent="."]
layout_mode = 2
offset_top = 514.079
offset_right = 1280.0
offset_bottom = 537.079
text = "10"

[node name="map" type="Button" parent="."]
offset_left = 1013.0
offset_top = 74.0
offset_right = 1056.0
offset_bottom = 105.0
scale = Vector2(1.84, 1.52)
text = "map
"

[connection signal="pressed" from="map" to="." method="_on_map_pressed"]
